# Biovoltron

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CNAME  LICENSE  README.md  algo_2all_8hpp_source.html  algo_2suffix__sorter_2all_8hpp_source.html  classbiovoltron_1_1detail_1_1XbitIteratorBase-members.html  classbiovoltron_1_1detail_1_1XbitVectorBase-members.html  container_2all_8hpp_source.html  contribute.html  dir_2d2d9b9415cf7b76879b6457574ebfb6.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_59ad08e624c24a39147d375b1028f231.html  dir_80c53aa2f440097c8e6d56d7b493c673.html  dir_953ac13dcbfb3e70ef6edb1a0956b929.html  dir_f4ec3cbfac9753597f54d2df36de2346.html  group__algo.html  header_8hpp_source.html  index.html  installation.html  modules.html  navtreedata.js  navtreeindex0.js  stable__sorter_8hpp_source.html  structbiovoltron_1_1StableSorter.html  structbiovoltron_1_1detail_1_1XbitConstIterator-members.html  structbiovoltron_1_1detail_1_1XbitIterator-members.html  suffix__sorter_8hpp_source.html  tutorials-fileio-fasta.html  tutorials-fileio-fastq.html  tutorials.html  xbit__vector_8hpp_source.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml  pull-request-check.yml
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  DoxygenLayout.xml.bak  custom.css  header.html
docs/markdown/: contribute.md  index.md  installation.md
docs/markdown/tutorials/: index.md
docs/markdown/tutorials/file_io/: fasta.md  fastq.md
include/biovoltron/algo/: all.hpp
include/biovoltron/container/: all.hpp  xbit_vector.hpp
include/biovoltron/file_io/: all.hpp  fasta.hpp  fastq.hpp
include/biovoltron/utility/: all.hpp  istring.hpp
pr-preview/pr-1/: dir_072e73bac57d6500868f56ae13299744.html  installation.html  tutorials-fileio-fasta.html
pr-preview/pr-1/search/: all_0.js  all_2.js  all_3.js  pages_0.js
pr-preview/pr-2/: menudata.js  navtreeindex0.js
pr-preview/pr-3/: annotated.html  annotated.js  annotated_dup.js  classes.html  dir_072e73bac57d6500868f56ae13299744.html  dir_0b651c49964504c32b87e0ef520309b5.html  dir_1cbaaf01c106d22063643cb2f6f05945.html  dir_6de580dcc81d7f35d6f3c2d35b4c6180.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  istring_8hpp_source.html  menudata.js  modules.js  navtreedata.js  navtreeindex0.js  pages.html  structbiovoltron_1_1AnyField-members.html  structbiovoltron_1_1AnyField.js  structbiovoltron_1_1FastaRecord.html  structbiovoltron_1_1FastaRecord.js  structbiovoltron_1_1FastqRecord.html  structbiovoltron_1_1FastqRecord.js  structbiovoltron_1_1Header.js  utility_2all_8hpp_source.html
pr-preview/pr-5/: dir_29ec8dce6a16edd96ca1db3f8aa784f2.html  fasta_8hpp_source.html  fastq_8hpp_source.html  group__file__io.html  group__suffix__sorter.js  menudata.js  modules.html  modules.js  record_8hpp_source.html  structbiovoltron_1_1Codec-members.html  structbiovoltron_1_1FastaRecord-members.html  structbiovoltron_1_1FastqRecord-members.html
pr-preview/pr-6/: classbiovoltron_1_1detail_1_1XbitReference.html  container_2all_8hpp_source.html  dir_27f0082532cf817aef56f502410b716a.html  group__container.html  group__file__io.js  group__utility.html  modules.html  navtreedata.js  structbiovoltron_1_1AnyField.html  structbiovoltron_1_1Codec.html  structbiovoltron_1_1detail_1_1XbitConstIterator.html  xbit__vector_8hpp_source.html
pr-preview/pr-7/: algo_2suffix__sorter_2all_8hpp_source.html  classbiovoltron_1_1detail_1_1XbitIteratorBase.html  classbiovoltron_1_1detail_1_1XbitReference-members.html  classbiovoltron_1_1detail_1_1XbitVectorBase.html  dir_953ac13dcbfb3e70ef6edb1a0956b929.html  dir_d44c64559bbebec7f509842c48db8b23.html  file__io_2all_8hpp_source.html  group__algo.js  group__container.js  group__suffix__sorter.html  group__utility.js  modules.js  sais__sorter_8hpp_source.html  structbiovoltron_1_1Header-members.html  structbiovoltron_1_1Header.html  structbiovoltron_1_1HeaderableRecord.html  structbiovoltron_1_1Record.html  structbiovoltron_1_1SaisSorter-members.html  structbiovoltron_1_1SaisSorter.html  structbiovoltron_1_1StableSorter-members.html  structbiovoltron_1_1detail_1_1XbitIterator.html  tuple_8hpp_source.html
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
tests/: CMakeLists.txt  catch.hpp  main.cpp
tests/algo/suffix_sorter/: sais_sorter.cpp  stable_sorter.cpp
tests/algo/suffix_sorter/core/: suffix_sorter.cpp
tests/container/: dibit_vector.cpp
tests/file_io/: fasta.cpp  fastq.cpp
tests/utility/: istring.cpp
(+117 files in other folders)
